# azure-rag

./: .funcignore  .gitignore  function_app.py  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  signalr.py
